--- a/Project_PRN222/Pages/Shared/ShopLayout.cshtml
+++ b/Project_PRN222/Pages/Shared/ShopLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EcoNest - Bông Tắm Xơ Mướp</title>
+	<title>EcoNest - Group 2 Bông Tắm</title>
 	<link rel="icon" type="image/png" href="~/img/econest_finalllllll_png.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -350,9 +350,9 @@
 						<h2 class="ftco-heading-2">Liên Hệ Với Chúng Tôi</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">(+84) 961 716 927</span></a></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text">(+84) 978 468 063</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span class="text">econest@gmail.com</span></a></li>
-								<li><a href="https://www.facebook.com/profile.php?id=61566368013857"><span class="icon icon-facebook"></span><span class="text">EcoNest</span></a></li>
+								<li><a href="https://www.facebook.com/profile.php?id=100017097183407"><span class="icon icon-facebook"></span><span class="text">EcoNest</span></a></li>
 							</ul>
 						</div>
 					</div>
