--- a/Project_PRN222/Pages/Shop/Index.cshtml
+++ b/Project_PRN222/Pages/Shop/Index.cshtml
@@ -43,6 +43,18 @@
 			margin-top: 10px;
 		}
 
+		.slider-title {
+		
+		
+			font-weight: bold !important;
+			color: #fff !important;
+			text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5) !important;
+			letter-spacing: 1px !important;
+			text-transform: uppercase !important;
+			animation: fadeInUp 1s ease-in-out !important;
+		}
+
+
 	</style>
 </head>
 <body class="goto-here">
@@ -53,7 +65,7 @@
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 						<div class="col-md-12 ftco-animate text-center">
-							<h1 class="mb-2">Sản phẩm xơ mướp an toàn &amp; tự nhiên</h1>
+							<h1 class="slider-title mb-2">Sản phẩm xơ mướp an toàn &amp; tự nhiên</h1>
 							<h2 class="subheading mb-4">Sạch &amp; Sành &amp; Xanh</h2>
 							<p><a href="~/Shop/Product" class="btn btn-primary">Chi tiết</a></p>
 						</div>
@@ -65,7 +77,7 @@
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 						<div class="col-md-12 ftco-animate text-center">
-							<h1 class="mb-2">Sản phẩm xơ mướp an toàn &amp; tự nhiên</h1>
+							<h1 class="slider-title mb-2">Sản phẩm xơ mướp an toàn &amp; tự nhiên</h1>
 							<h2 class="subheading mb-4">Sạch &amp; Sành &amp; Xanh</h2>
 							<p><a href="~/Shop/Product" class="btn btn-primary">Chi tiết</a></p>
 						</div>
@@ -78,7 +90,7 @@
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 						<div class="col-sm-12 ftco-animate text-center">
-							<h1 class="mb-2">100% Tự Nhiên &amp; bảo vệ môi trường</h1>
+							<h1 class="slider-title mb-2">100% Tự Nhiên &amp; bảo vệ môi trường</h1>
 							<h2 class="subheading mb-4">Sạch &amp; Sành &amp; Xanh</h2>
 							<p><a href="~/Shop/Product" class="btn btn-primary">Chi tiết</a></p>
 						</div>
@@ -108,7 +120,7 @@
 						<div class="col-md-6">
 							<div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url('https://i.imgur.com/SYz51Og.jpeg');">
 								<div class="text px-3 py-1">
-									<h2 class="mb-0"><a href="~/Shop/ProductDetails?id=fade0338-bb3f-469d-8b5e-968cb71bc9a1">Bông tắm xơ mướp EcoNest</a></h2>
+									<h2 class="mb-0"><a href="~/Shop/ProductDetails?id=922c78cd-529c-4ecd-961a-3411af81cad2">Bông tắm xơ mướp EcoNest</a></h2>
 								</div>
 							</div>
 							<div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url('https://i.imgur.com/bTXeqKV.jpeg');">
@@ -150,7 +162,7 @@
 			<div class="row">
 				<div class="col-md-6 d-flex ftco-animate">
 					<div class="blog-entry align-self-stretch d-md-flex">
-						<a href="~/Blog/Details?id=4dcf2876-6d3b-4e2c-17df-08dcdf8d0fca" class="block-20" style="background-image: url('/img/ImgBlog/1711027012anh-nguyen-phu-tung-dang-nghien-cuu-tai-vung-nguyen-lieu_(1).jpg'); height: 300px;">
+						<a href="~/Blog/Details?id=bbe9fece-807c-4fd5-b434-278b62564338" class="block-20" style="background-image: url('/img/ImgBlog/1711027012anh-nguyen-phu-tung-dang-nghien-cuu-tai-vung-nguyen-lieu_(1).jpg'); height: 300px;">
 						</a>
 						<div class="text d-block pl-md-4">
 							<div class="meta mb-3">
@@ -158,15 +170,15 @@
 								<div><a>Admin</a></div>
 								<div><a class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 							</div>
-							<h3 class="heading"><a href="~/Blog/Details?id=4dcf2876-6d3b-4e2c-17df-08dcdf8d0fca">Sản phẩm thời trang bằng xơ mướp</a></h3>
+							<h3 class="heading"><a href="~/Blog/Details?id=bbe9fece-807c-4fd5-b434-278b62564338">Trải nghiệm chuyển đổi vật liệu công nghiệp sang vật liệu tự nhiên</a></h3>
 							<p>Ít ai ngờ, từ vật liệu tưởng chừng như bỏ đi là x...</p>
-							<p><a href="~/Blog/Details?id=4dcf2876-6d3b-4e2c-17df-08dcdf8d0fca" class="btn btn-primary py-2 px-3">Đọc thêm</a></p>
+							<p><a href="~/Blog/Details?id=bbe9fece-807c-4fd5-b434-278b62564338" class="btn btn-primary py-2 px-3">Đọc thêm</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 d-flex ftco-animate">
 					<div class="blog-entry align-self-stretch d-md-flex">
-						<a href="~/Blog/Details?id=13509f12-fa85-46f8-17e2-08dcdf8d0fca" class="block-20" style="background-image: url('/img/ImgBlog/280692201_5885391238154438_8620160783337727460_n.jpg'); height: 300px;">
+						<a href="~/Blog/Details?id=7789f18a-1ca2-4235-a66f-5cd25b7953b9" class="block-20" style="background-image: url('/img/ImgBlog/280692201_5885391238154438_8620160783337727460_n.jpg'); height: 300px;">
 						</a>
 						<div class="text d-block pl-md-4">
 							<div class="meta mb-3">
@@ -174,9 +186,9 @@
 								<div><a>Admin</a></div>
 								<div><a class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 							</div>
-							<h3 class="heading"><a href="~/Blog/Details?id=13509f12-fa85-46f8-17e2-08dcdf8d0fca">Sống xanh cùng sản phẩm xơ mướp</a></h3>
+							<h3 class="heading"><a href="~/Blog/Details?id=7789f18a-1ca2-4235-a66f-5cd25b7953b9">Sứ Mệnh Đưa Xơ Mướp Đến Tay Người Tiêu Dùng</a></h3>
 							<p>Xơ mướp là nguyên liệu có nguồn gốc từ thiên nhiê...</p>
-							<p><a href="~/Blog/Details?id=13509f12-fa85-46f8-17e2-08dcdf8d0fca" class="btn btn-primary py-2 px-3">Đọc thêm</a></p>
+							<p><a href="~/Blog/Details?id=7789f18a-1ca2-4235-a66f-5cd25b7953b9" class="btn btn-primary py-2 px-3">Đọc thêm</a></p>
 						</div>
 					</div>
 				</div>
