--- a/Project_PRN222/Pages/Login/Index.cshtml
+++ b/Project_PRN222/Pages/Login/Index.cshtml
@@ -66,7 +66,7 @@
                                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                                     <p class="mb-4 text-sm mx-auto">
                                         Quên Mật Khẩu?
-                                        <a href="#" class="text-success text-gradient font-weight-bold">Nhấn vào đây</a>
+                                        <a href="Login/ForgetPassword" class="text-success text-gradient font-weight-bold">Nhấn vào đây</a>
                                     </p>
                                 </div>
                             </div>
