--- a/Project_PRN222/Pages/Login/ForgetPassword.cshtml
+++ b/Project_PRN222/Pages/Login/ForgetPassword.cshtml
@@ -22,13 +22,22 @@
                                     <form method="post">
                                         <label>Email</label>
                                         <div class="mb-3">
-                                            <input type="email" name="email" required class="form-control" placeholder="Email" aria-label="Email" aria-describedby="email-addon">
+                                            <input type="email" name="email" required class="form-control" placeholder="name@email.com">
                                         </div>
 
+                                        @* <div class="g-recaptcha" data-sitekey="6LdIoAUrAAAAAC2WXS7kUiM4JY0VF9RYsE4mOsJX"></div> *@
+
                                         <div class="text-center">
-                                            <button type="submit" class="btn bg-gradient-success w-100 mt-4 mb-0">Đăng Nhập</button>
+                                            <button type="submit" class="btn bg-gradient-success w-100 mt-4 mb-0">Reset Password</button>
                                         </div>
                                     </form>
+                                </div>
+
+                                <div class="card-footer text-center pt-0 px-lg-2 px-1">
+                                    <p class="mb-4 text-sm mx-auto">
+                                        Đã có Tài Khoản?
+                                        <a href="/Login" class="text-success text-gradient font-weight-bold">Đăng Nhập</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -42,4 +51,5 @@
             </div>
         </section>
     </main>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
